--- a/post.html
+++ b/post.html
@@ -94,7 +94,7 @@ To keep your dehumidifier functioning optimally, regular maintenance is required
                             Placeholder text by
                             <a href="http://spaceipsum.com/">Space Ipsum</a>
                             &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
+                            <a href="https://www.healthline.com/health/dehumidifier-benefits">what does a dehumidifier do for your health </a>
                         </p>
                     </div>
                 </div>
