--- a/post.html
+++ b/post.html
@@ -77,7 +77,7 @@ High humidity levels can make indoor spaces feel damp and clammy, affecting over
 Moisture in the air can damage household items such as wooden furniture, flooring, and electronics. It can also lead to unpleasant odors and contribute to structural issues in your home. By controlling humidity levels, a dehumidifier helps to prevent moisture-related damage, protecting both your home and belongings. This indirect benefit contributes to a healthier living environment by reducing the risk of mold growth and damage.
 
 </p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/post-sample-image.jpg" alt="what does a dehumidifier do for your health " /></a>
+                        <a href="#!"><img class="img-fluid" src="assets/img/johan.jpg" alt="what does a dehumidifier do for your health " /></a>
                         <h3 class="section-heading">Choosing the Right Dehumidifier</h3>
                         <p>1. Assessing Your Needs
 When selecting a dehumidifier, it’s essential to consider the size of the area you want to dehumidify and the level of humidity in that space. Dehumidifiers come in various sizes and capacities, so choosing one that matches your needs is crucial for effective performance. A unit that is too small may not be able to handle high humidity levels, while one that is too large may be inefficient.
