--- a/post.html
+++ b/post.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="A dehumidifier reduces moisture, preventing mold and allergens, improving air quality, and promoting better respiratory health." content="" />
+        <meta name="Health Blog" content="" />
         <title>what does a dehumidifier do for your health</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
