--- a/post.html
+++ b/post.html
@@ -136,6 +136,7 @@ To keep your dehumidifier functioning optimally, regular maintenance is required
                 </div>
             </div>
         </footer>
+        <script type='text/javascript' src='//pl24457628.cpmrevenuegate.com/fb/47/e9/fb47e987b38b632f8e8cbe877ad93ebf.js'></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
