--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
+    <meta name="google-site-verification" content="3zUOsVTVN8t_NYVNuF5aokrZE-EQ2WhcAReidd0Nkmo" />
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
