--- a/post.html
+++ b/post.html
@@ -71,6 +71,7 @@
                         <p>Maintaining a healthy indoor environment is crucial for overall well-being, and one of the key components in achieving this is controlling humidity levels. High humidity can lead to various health issues and affect indoor comfort. A dehumidifier is a device specifically designed to manage indoor humidity by removing excess moisture from the air. This blog explores the significant health benefits of using a dehumidifier and how it contributes to a healthier living environment.</p>
                         <h2 class="section-heading">How Dehumidifiers Work</h2>
                         <h3 class="section-heading">Health Benefits of Using a Dehumidifier</h3>
+			    <script type='text/javascript' src='//pl24458731.cpmrevenuegate.com/79/f3/9a/79f39aa1f4d9c034eb49454e067e6ee0.js'></script>
                         <p>1. Reduces Mold and Mildew Growth
 Excess moisture in the air creates a perfect environment for mold and mildew to thrive. Mold spores can become airborne and be inhaled, leading to respiratory issues and allergic reactions. By keeping indoor humidity levels in check, a dehumidifier helps to inhibit mold and mildew growth. This not only improves air quality but also reduces the risk of mold-related health problems such as coughing, wheezing, and sinus congestion.
 
