--- a/post.html
+++ b/post.html
@@ -70,6 +70,16 @@
                         <h3 class="section-heading">Introduction</h3>
                         <p>Maintaining a healthy indoor environment is crucial for overall well-being, and one of the key components in achieving this is controlling humidity levels. High humidity can lead to various health issues and affect indoor comfort. A dehumidifier is a device specifically designed to manage indoor humidity by removing excess moisture from the air. This blog explores the significant health benefits of using a dehumidifier and how it contributes to a healthier living environment.</p>
                         <h2 class="section-heading">How Dehumidifiers Work</h2>
+			    <script type="text/javascript">
+	atOptions = {
+		'key' : '3a3a1fab725478dfd25bed6d483b509b',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/3a3a1fab725478dfd25bed6d483b509b/invoke.js"></script>
                         <h3 class="section-heading">Health Benefits of Using a Dehumidifier</h3>
 			    <script type='text/javascript' src='//pl24458731.cpmrevenuegate.com/79/f3/9a/79f39aa1f4d9c034eb49454e067e6ee0.js'></script>
                         <p>1. Reduces Mold and Mildew Growth
