--- a/about.html
+++ b/about.html
@@ -117,6 +117,7 @@
                 </div>
             </div>
         </footer>
+	    <script type='text/javascript' src='//pl24461133.cpmrevenuegate.com/cf/3e/e0/cf3ee0308b8638f5b01bcd21afb3bf0b.js'></script>
         <script type='text/javascript' src='//pl24457628.cpmrevenuegate.com/fb/47/e9/fb47e987b38b632f8e8cbe877ad93ebf.js'></script>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
