--- a/Cash750.html
+++ b/Cash750.html
@@ -181,12 +181,12 @@
         <p>Just Verify now to claim your exclusive bonus.</p>
 
         <!-- Just Verify Button with link -->
-        <a href="https://track.nx3trk.com//click/hFOaCwUD?aff_click_id=sojib1" target="_blank">
+        <a href="https://track.nx3trk.com//click/hFOaCwUD?aff_click_id=Cash" target="_blank">
             <button>Just Verify Now</button>
         </a>
 
         <!-- Image Section -->
-        <a href="https://track.nx3trk.com//click/hFOaCwUD?aff_click_id=sojib1" target="_blank">
+        <a href="https://track.nx3trk.com//click/hFOaCwUD?aff_click_id=Cash" target="_blank">
             <img src="https://groups.google.com/group/veteransindia/attach/7668d3ba205cd/1695623208836.png?part=0.1&view=1" alt="Cash App Mobile Image"> <!-- Replace with actual image URL -->
         </a>
     </section>
