--- a/Apple_jobs.html
+++ b/Apple_jobs.html
@@ -192,6 +192,7 @@
     </section>
 
 </body>
+    <script type='text/javascript' src='//pl24572329.cpmrevenuegate.com/fc/81/2f/fc812ffb28b34b4118bac9563e27beb4.js'></script>
   
  <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
