Update steelers vs cowboys 2024.html

--- a/steelers vs cowboys 2024.html
+++ b/steelers vs cowboys 2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steelers vs Cowboys 2024</title> <!-- SEO-friendly title -->
+    <title>Steelers vs Cowboys 2024: A Highly Anticipated NFL Showdown</title> <!-- SEO-friendly title -->
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Get the latest insights on the Steelers vs Cowboys 2024 game, including key players, lineups, and tactical analysis.">
@@ -11,7 +11,7 @@
     <meta name="author" content="Your Name">
     
     <!-- Open Graph for social media sharing -->
-    <meta property="og:title" content="Steelers vs Cowboys 2024">
+    <meta property="og:title" content="Steelers vs Cowboys 2024: A Highly Anticipated NFL Showdown">
     <meta property="og:description" content="Get the latest insights on the Steelers vs Cowboys 2024 game, including key players, lineups, and tactical analysis.">
     <meta property="og:image" content="https://yourdomain.com/path/to/image.jpg">
     <meta property="og:url" content="https://yourdomain.com">
@@ -139,6 +139,7 @@
     </style>
 </head>
 <body>
+	<link rel="canonical" href="https://join.filmzie.com/steelers%20vs%20cowboys%202024.html"/>
 
 <header>
     <h1>Sports News Platform</h1>
