Update steelers vs cowboys 2024.html

--- a/steelers vs cowboys 2024.html
+++ b/steelers vs cowboys 2024.html
@@ -18,7 +18,7 @@
     
     <!-- Twitter Card for better social sharing -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Steelers vs Cowboys 2024">
+    <meta name="twitter:title" content="Steelers vs Cowboys 2024: A Highly Anticipated NFL Showdown">
     <meta name="twitter:description" content="Get the latest insights on the Steelers vs Cowboys 2024 game, including key players, lineups, and tactical analysis.">
     <meta name="twitter:image" content="https://yourdomain.com/path/to/image.jpg">
 
