--- a/2024.html
+++ b/2024.html
@@ -139,7 +139,7 @@
     </style>
 </head>
 <body>
-	<link rel="canonical" href="https://join.filmzie.com/steelers%20vs%20cowboys%202024.html"/>
+	<link rel="canonical" href="https://join.filmzie.com/2024.html"/>
 
 <header>
     <h1>Sports News Platform</h1>
