--- a/2024.html
+++ b/2024.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steelers vs Cowboys 2024: A Highly Anticipated NFL Showdown</title> <!-- SEO-friendly title -->
+    <title>What Is a Good 40-Yard Dash Time for a 13-Year-Old?</title> <!-- SEO-friendly title -->
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Learn what a good 40-yard dash time for a 13-year-old is, including average times, training tips, and key performance factors.">
@@ -11,7 +11,7 @@
     <meta name="author" content="Your Name">
     
     <!-- Open Graph for social media sharing -->
-    <meta property="og:title" content="what is a good 40 yard dash time for a 13 year old">
+    <meta property="og:title" content="What Is a Good 40-Yard Dash Time for a 13-Year-Old?">
     <meta property="og:description" content="Get the latest insights on the Steelers vs Cowboys 2024 game, including key players, lineups, and tactical analysis.">
     <meta property="og:image" content="https://yourdomain.com/path/to/image.jpg">
     <meta property="og:url" content="https://yourdomain.com">
