--- a/mcdonals.html
+++ b/mcdonals.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Your Name">
     
     <!-- Open Graph for social media sharing -->
-    <meta property="og:title" content="Steelers vs Cowboys 2024: A Highly Anticipated NFL Showdown">
+    <meta property="og:title" content="The Secret Behind McDonald's French Fries: Why They're So Popular">
     <meta property="og:description" content="Get the latest insights on the Steelers vs Cowboys 2024 game, including key players, lineups, and tactical analysis.">
     <meta property="og:image" content="https://yourdomain.com/path/to/image.jpg">
     <meta property="og:url" content="https://yourdomain.com">
