Update lincoln lawyer season 3 release date.html

--- a/lincoln lawyer season 3 release date.html
+++ b/lincoln lawyer season 3 release date.html
@@ -139,7 +139,7 @@
     </style>
 </head>
 <body>
-	<link rel="canonical" href="https://join.filmzie.com/steelers%20vs%20cowboys%202024.html"/>
+	<link rel="canonical" href="https://join.filmzie.com/lincoln%20lawyer%20season%203%20release%20date.html"/>
 
 <header>
     <h1>Sports News Platform</h1>
