Update lincoln lawyer season 3 release date.html

--- a/lincoln lawyer season 3 release date.html
+++ b/lincoln lawyer season 3 release date.html
@@ -13,7 +13,7 @@
     <!-- Open Graph for social media sharing -->
     <meta property="og:title" content="The Lincoln Lawyer Season 3 Release Date: Everything You Need to Know">
     <meta property="og:description" content="Discover the latest updates on Lincoln Lawyer Season 3 release date, including cast news and anticipated premiere details.">
-    <meta property="og:image" content="<p>&nbsp;</p><a></a><div style="text-align: center;"><a></a><a href="https://en.wikipedia.org/wiki/The_Lincoln_Lawyer_(TV_series)#:~:text=It%20is%20based%20upon%20Connelly's,released%20on%20October%2017%2C%202024." target="_blank"><img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh-Tz6tvYASOPcVC0_VTJ8F_S8jU4CeOHdGLs8cnZpyIiNh9qg6Yq1IrhUHZbuoElKACzs1TwXXJ5w0cTojBH_OJ4I3Wzy0M-20naAyO5N52-ECpUx50s6-2WJCGZEFH-g8CHSdu3-epUmlnAxFUpU4p7znT5TlRiMSCud6iVro7IxUCSxYoRaRXHxWc2Y/w624-h414/Screenshot_3.png" /></a></div>">
+    <meta property="og:image" content="https://yourdomain.com/path/to/image.jpg">
     <meta property="og:url" content="lincoln lawyer season 3 release date">
     
     <!-- Twitter Card for better social sharing -->
