--- a/colorado vs arizona.html
+++ b/colorado vs arizona.html
@@ -14,7 +14,7 @@
     <!-- Open Graph for social media sharing -->
     <meta property="og:title" content="Colorado vs Arizona: A Thrilling Pac-12 Showdown">
     <meta property="og:description" content="Discover the latest updates on Lincoln Lawyer Season 3 release date, including cast news and anticipated premiere details.">
-    <meta property="og:image" content="https://yourdomain.com/path/to/image.jpg">
+    <meta property="og:image" content="htt">
     <meta property="og:url" content="lincoln lawyer season 3 release date">
     
     <!-- Twitter Card for better social sharing -->
