Update colorado vs arizona.html

--- a/colorado vs arizona.html
+++ b/colorado vs arizona.html
@@ -140,7 +140,7 @@
     </style>
 </head>
 <body>
-	<link rel="canonical" href="https://join.filmzie.com/lincoln%20lawyer%20season%203%20release%20date.html"/>
+	<link rel="canonical" href="https://join.filmzie.com/colorado%20vs%20arizona.html"/>
 
 <header>
     <h1>Sports News Platform</h1>
